fonctionnalite de us4 - us8

--- a/.env.exemple
+++ b/.env.exemple
@@ -4,8 +4,13 @@ DB_PASSWORD=
 TWILIO_SID=
 TWILIO_TOKEN=
 TWILIO_FROM=
+
+IMG_DIR =/public/images/uploads/
     
 dsn=
+
+#a remplir utilise sur le migrate et seed! 
+dsnLocal=
 
 
 
