--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "App\\Service\\": "src/service/",
             "App\\Controller\\": "src/controller/",
             "App\\Core\\Abstract\\": "app/core/abstract/",
-            "App\\Core\\Middlewares\\": "app/core/middlewares/"
+            "App\\Core\\Middlewares\\": "app/core/middlewares/",
+            "App\\Config\\Translate\\Fr\\": "app/config/translate/fr/"
         }
     },
     "authors": [
@@ -20,5 +21,10 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "twilio/sdk": "^8.6"
+    },
+    "scripts": {
+      "database:migrate": "php migrations/Migration.php",
+      "database:seed": "php seeders/Seeder.php"
+
     }
 }
