--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,6 +1,14 @@
 FROM php:8.3-cli
 
-RUN apt-get update && apt-get install -y libpq-dev \
-    && docker-php-ext-install pdo pdo_pgsql pgsql
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN docker-php-ext-install pdo pdo_pgsql pgsql
+
+
+
+
+
 
 WORKDIR /src
