--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,6 +1,6 @@
 FROM php:8.3-apache
 
-# Mise à jour + installation des dépendances système
+# Dépendances système
 RUN apt-get update && apt-get install -y \
     libpq-dev \
     libzip-dev \
@@ -8,20 +8,24 @@ RUN apt-get update && apt-get install -y \
     unzip \
     && docker-php-ext-install pdo pdo_pgsql pgsql
 
-# Activer le module Apache rewrite
+# Modules Apache
 RUN a2enmod rewrite
 
-# Copier la configuration Apache personnalisée
+# Copier config Apache
 COPY apache-config.conf /etc/apache2/sites-available/000-default.conf
 
-# Installer Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
+WORKDIR /app
 
 COPY . /app
 
+RUN echo "DB_USER=${DB_USER}" > .env && \
+    echo "DB_PASSWORD=${DB_PASSWORD}" >> .env && \
+    echo "APP_URL=${APP_URL}" >> .env && \
+    echo "dsn=${dsn}" >> .env
+
+# Permissions
 RUN chown -R www-data:www-data /app
-
-
-WORKDIR /app
 
 EXPOSE 80
