--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mgdigi/maxit-sa",
+    "name": "mhddigi/maxit-sa",
     "autoload": {
         "psr-4": {
             "App\\Entity\\": "src/entity/",
