--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,6 @@
       "database:migrate": "php migrations/Migration.php",
       "database:seed": "php seeders/Seeder.php"
 
-    }
+    },
+    "type" : "project"
 }
